objects/SFDC_Case_To_Marketo_Field_Mappings_YBN__c.object
<CustomObject>
    <fields>
        <fullName>Case_Reason_Criteria__c</fullName>
        <label>Case Reason Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_API_Name__c</fullName>
        <label>SFDC Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Blank_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Blank Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Field</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Only for YBN Outbound touchpoint record type cases</description>
    <label>SFDC Case To Marketo Field Mappings YBN</label>
</CustomObject>